force-app/main/default/objects/RET_GREX_Integration_Email_Settings__c/RET_GREX_Integration_Email_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains email settings for notifications used by Real Estate Tax GREX integration.</description>
    <label>RET GREX Integration Email Settings</label>
</CustomObject>