force-app/main/default/objects/RET_GREX_Integration_Email_Settings__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>The email body. Additional information (integration error messages, etc.) may be appended.</description>
    <inlineHelpText>The email body. Additional information (integration error messages, etc.) may be appended.</inlineHelpText>
    <label>Email Body</label>
    <type>TextArea</type>
</CustomField>