force-app/main/default/objects/RET_GREX_Integration_Email_Settings__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <description>The email subject line.</description>
    <inlineHelpText>The email subject line.</inlineHelpText>
    <label>Email Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>