force-app/main/default/objects/RET_GREX_Integration_Email_Settings__c/fields/Sender_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Display_Name__c</fullName>
    <description>The name displayed in the email &quot;From&quot; Field.</description>
    <inlineHelpText>The name displayed in the email &quot;From&quot; Field.</inlineHelpText>
    <label>Sender Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>