force-app/main/default/objects/RET_GREX_Integration_Email_Settings__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <description>The email address or distribution list that the email will be sent to.</description>
    <inlineHelpText>The email address or distribution list that the email will be sent to.</inlineHelpText>
    <label>To Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>